[bug] fix fab z-index

--- a/src/sass/variables/_global.scss
+++ b/src/sass/variables/_global.scss
@@ -271,8 +271,8 @@ $fireball:                           2000;
 $tip:                                3000;
 $card-controls:                      4000;
 $log:                                5000;
-$nav:                                6000;
-$fab:                                7000;
+$fab:                                6000;
+$nav:                                7000;
 $snacks:                             9000;
 $quick-nav:                          10000;
 $prompt:                             11000;
